deploy/pachbot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pachbot-#BUILD_NUMBER#
  namespace: deployment
  labels:
    run: pachbot
spec:
  hostNetwork: true
  containers:
    - image: pskreter/pachbot:0.2.20
      name: pachbot
      imagePullPolicy: Always
      command:
        - /bin/bash
      args:
        - -c
        - /update.sh
      resources: {}
      volumeMounts:
        - name: pipeline-volume
          mountPath: /pipelines
  volumes:
    - name: pipeline-volume
      configMap:
        name: pipelines
  restartPolicy: Never
