deploy/pachctl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pachctl
  namespace: tools
  labels:
    run: pachctl
spec:
  containers:
    - args:
        - -f
        - /dev/null
      command:
        - tail
      image: pskreter/pachbot:0.2.24
      imagePullPolicy: Always
      name: pachctl
      resources: {}
      volumeMounts:
        - name: pipeline-volume
          mountPath: /pipelines
  hostNetwork: true
  volumes:
    - name: pipeline-volume
      configMap:
        name: pipelines
  restartPolicy: Always
