deploy/pachyderm-dash-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dash
    suite: pachyderm
  name: dash-external
  namespace: default
spec:
  ports:
    - name: dash-http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: dash
    suite: pachyderm
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dash-external
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: dash.<dns-server>
      http:
        paths:
          - backend:
              serviceName: dash-external
              servicePort: 80
            path: /
